# keyrock_challenge

./: Cargo.toml  README.md  build.rs
src/client/: Cargo.toml
src/client/src/: console_renderer.rs  main.rs
src/proto/: Cargo.toml
src/server/: Cargo.toml  aggregator.rs  binance_spot.rs  bitstamp_spot.rs  level.rs  limited_collection.rs  main.rs  orderbook_snapshot.rs  summary.rs
src/server/src/: aggregator.rs  binance_spot.rs  bitstamp_spot.rs  grpc.rs  main.rs  orderbook_snapshot.rs  spmc.rs
