[package]
name = "keyrock_challenge"
version = "1.0.0"
authors = ["Finn Fiedler"]
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
tonic = "0.8.0"
prost = "0.11"
tungstenite = {version = "0.17.3", features = ["native-tls"]}
url = "2.2.2"
serde_json = "1.0"
init_with = "1.1.0"
colored = "2.0.0"

# [build-dependencies]
# tonic-build = "0.8"