[package]
name = "keyrock_challenge_client"
version = "1.0.0"
authors = ["Finn Fiedler"]
edition = "2021"

[dependencies]
keyrock_challenge_proto = { path = "../proto" }

tonic = "0.8.0"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.9"
colored = "2.0.0"
